--- a/Snacker.Api/Snacker.Api.csproj
+++ b/Snacker.Api/Snacker.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a6b60542-fe7b-432f-b69f-d348b8e954c6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
