--- a/Snacker.Infrastructure/Snacker.Infrastructure.csproj
+++ b/Snacker.Infrastructure/Snacker.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Snacker.Application\Snacker.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
+  </ItemGroup>
+
 </Project>
