--- a/Snacker.Application/Snacker.Application.csproj
+++ b/Snacker.Application/Snacker.Application.csproj
@@ -11,5 +11,12 @@
     <ProjectReference Include="..\Snacker.Domain\Snacker.Domain.csproj" />
   </ItemGroup>
 
+<ItemGroup>
+  <PackageReference Include="FluentResults" Version="3.15.1" />
+  <PackageReference Include="MediatR" Version="11.1.0" />
+  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  <PackageReference Include="oneof" Version="3.0.223" />
+</ItemGroup>
+
 
 </Project>
