--- a/Snacker.Api/appsettings.Development.json
+++ b/Snacker.Api/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+    
+  },
+
+  "JwtSettings" : {
+    "Secret": "super-secret-key",
+    "ExpiryMinutes": 60,
+    "Issuer":"Snacker",
+    "Audience":"Snacker"
   }
+  
 }
