--- a/Snacker.Api/appsettings.json
+++ b/Snacker.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+ 
+  "AllowedHosts": "*",
+  "JwtSettings" : {
+    "Secret": "",
+    "ExpiryMinutes": 0,
+    "Issuer":"",
+    "Audience":""
+  }
 }
